--- a/Null.Faststart.WinForm/Null.Faststart.WinForm.csproj
+++ b/Null.Faststart.WinForm/Null.Faststart.WinForm.csproj
@@ -42,6 +42,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -94,6 +95,9 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Util\CliCall.cs" />
+    <Compile Include="Util\DragMessageFilter.cs" />
+    <Compile Include="Util\WndWinAPI.cs" />
     <Compile Include="ViewModule\LinkInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -164,7 +168,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="readme.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -182,6 +185,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Null.Faststart.Cli\Null.Faststart.Cli.csproj">
+      <Project>{ea5f03ac-39b8-43c5-9c0f-463943202b35}</Project>
+      <Name>Null.Faststart.Cli</Name>
+    </ProjectReference>
     <ProjectReference Include="..\NullLib.Faststart\NullLib.Faststart.csproj">
       <Project>{ce095faf-4565-4825-8ed4-5eddfa736d41}</Project>
       <Name>NullLib.Faststart</Name>
