--- a/Null.Faststart.Cli/Null.Faststart.Cli.csproj
+++ b/Null.Faststart.Cli/Null.Faststart.Cli.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\AppConfigHelper.cs" />
     <Compile Include="Util\Log.cs" />
   </ItemGroup>
   <ItemGroup>
